--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <header>
-        <title>
-            Brian Pardo's Website
-        </title>
-    </header>
-    <nav>
-        <ul>
-            <li>
-                About
-            </li>
-            <li>
-                Portfolio
-            </li>
-            <li>
-                Resume
-            </li>
-            <li>
-                Publications
-            </li>
-        </ul>
+<header>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Brian Pardo - Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">  
+</header>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Brian Pardo</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Portfolio</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Resume</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Publications</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <body>
-        This is the body of my website.
-    </body>
+    <h1>Title</h1>
+    This is the body of my website.
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
